--- a/real-estate/client/src/components/RealEstate.css
+++ b/real-estate/client/src/components/RealEstate.css
@@ -1,12 +1,16 @@
 
+/***************PropertyNav.js ****************/
 
-/****************BasicInfo.js ********************/
+/****************BasicInfo.js, PropertyDetails.js, GeneralInfo.js, LocationInfo.js ********************/
 
 .card{
-    margin: 5%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin: 5% 10%;
+    width: 75%;
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+    box-shadow: 10px 14px 70px rgba(0,0,0,0.03);
     transition: 0.3s;
-    border-radius: 5px; 
+    border-radius: 20px; 
+    text-align: left;
 }
 
 .formSection {
@@ -17,31 +21,75 @@
     padding: 40px 60px;
   }
 
-  .formInput label{
-    text-align: right;
-  }
 
  .formInput input, select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    /* display: inline-block; */
     box-sizing: border-box;
+    border: 1px solid #C3C3C3;
+    border-radius: 8px;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    color: #7D7D7D;
+  }
+
+  .formInput label{
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 25px;
+    color: #7D7D7D;
+  }
+
+  .formInput button{
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 25px;
+    display: flex;
+    align-items: center;
+    color: #FFFFFF;
+    box-shadow: 0px 13px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 500px;
+    padding: 10px 30px;
   }
 
   .cancelBtn{
     border: none;
-    border-radius: 30px;
-    padding: 10px 30px;
-    margin: 0px 10px 10px 0px;
-    background-color: aqua;
+    float: right;
+    background: #6AB4F8;
   }
   .saveBtn{
     border: none;
-    border-radius: 30px;
-    padding: 10px 30px;
-    margin: 0px 0px 10px 10px;
-    background-color:blue;
+    background: #4C57B6;
+  }
+
+  /****************GeneralInfo.js ****************/
+
+  .eclipseCamera{
+    background: #6AB4F8;
+    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.13);
+    padding: 45px 28px 30px 28px;
+    border-radius: 100%;
+    margin-right: 10px;
+  }
+
+  .cameraText{
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    color: #7D7D7D;
+    /* top: 0px; 
+    right: 0px; */
+    /* height:80px; */
+    
   }
