--- a/real-estate/client/src/components/RealEstate.css
+++ b/real-estate/client/src/components/RealEstate.css
@@ -1,9 +1,9 @@
 /* Property Listing Page */
 .property{
-    margin-top: 20px;
-    margin-left: 20px;
-    width: 80%;
-    height: 100vh;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -12,7 +12,7 @@
 }
 .asideLeft{
     width: 15%;
-    height: 100%;
+    /* height: 100%; */
     background-color: aquamarine;
     display: flex;
     flex-direction: column;
@@ -20,6 +20,7 @@
 }
 .asideRight{
     width: 80%;
+    height: 6%;
 }
 .logo{
     margin-top: 10px;
@@ -111,6 +112,9 @@
     box-shadow: 5px 0px 0px 5px ghostwhite;
 }
 
+.noList{
+    padding-top: 100px;
+}
 /* Log in and sign up */
 .login{
     margin: auto auto;
@@ -185,4 +189,99 @@
     margin: auto auto;
    }
 }
+
+/***************PropertyNav.js ****************/
+
+/****************BasicInfo.js, PropertyDetails.js, GeneralInfo.js, LocationInfo.js ********************/
+/* Add New Property CSS */
+.card{
+    margin: 5% 10%;
+    width: 75%;
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+    box-shadow: 10px 14px 70px rgba(0,0,0,0.03);
+    transition: 0.3s;
+    border-radius: 20px; 
+    text-align: left;
+}
+
+.formSection {
+    
+    display: grid;
+    gap: 50px 30px;
+    grid-template-columns: auto auto;
+    padding: 40px 60px;
+  }
+
+
+ .formInput input, select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    /* display: inline-block; */
+    box-sizing: border-box;
+    border: 1px solid #C3C3C3;
+    border-radius: 8px;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    color: #7D7D7D;
+  }
+
+  .formInput label{
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 25px;
+    color: #7D7D7D;
+  }
+
+  .formInput button{
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 25px;
+    display: flex;
+    align-items: center;
+    color: #FFFFFF;
+    box-shadow: 0px 13px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 500px;
+    padding: 10px 30px;
+  }
+
+  .cancelBtn{
+    border: none;
+    float: right;
+    background: #6AB4F8;
+  }
+  .saveBtn{
+    border: none;
+    background: #4C57B6;
+  }
+
+  /****************GeneralInfo.js ****************/
+
+  .eclipseCamera{
+    background: #6AB4F8;
+    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.13);
+    padding: 45px 28px 30px 28px;
+    border-radius: 100%;
+    margin-right: 10px;
+  }
+
+  .cameraText{
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    color: #7D7D7D;
+    /* top: 0px; 
+    right: 0px; */
+    /* height:80px; */
+    
+  }
 
