--- a/real-estate/client/src/components/RealEstate.css
+++ b/real-estate/client/src/components/RealEstate.css
@@ -268,7 +268,7 @@
         border-radius: 5px;
 }
 .signup-items{
-    /* margin-top: 5px; */
+    margin-top: 10px;
         height: 30px;
         background-color: #FFFFFF;
         width: 385px;
